[workspace]

default-members = [
    "spdmlib",
    "codec",
    "test/spdm-requester-emu",
    "test/spdm-responder-emu",
]

members = [
    "spdmlib",
    "codec",
    "test/spdm-requester-emu",
    "test/spdm-responder-emu",
    "fuzz-target/responder/rspversion",
    "fuzz-target/responder/rspcapability",
    "fuzz-target/responder/rspalgorithm",
    "fuzz-target/responder/rspdigest",
    "fuzz-target/responder/rspcertificate",
    "fuzz-target/responder/rspchallenge",
    "fuzz-target/responder/rspmeasurement",
    "fuzz-target/responder/rspkeyexchange",
    "fuzz-target/responder/rsppskexchange",

    "fuzz-target/requester/reqversion",
    "fuzz-target/requester/reqcapability",
    "fuzz-target/requester/reqalgorithm",
    "fuzz-target/requester/reqdigest",
    "fuzz-target/requester/reqcertificate",
    "fuzz-target/requester/reqchallenge",
    "fuzz-target/requester/reqmeasurement",
    "fuzz-target/requester/key_exchange_req",
    "fuzz-target/requester/psk_exchange_req",
    "fuzz-target/pass_context",
]
exclude = [
    "external/ring",
    "external/webpki",
    "fuzz-target/"
]
