[package]
name = "fuzzlib"
version = "0.1.0"
authors = ["haowei <weix.hao@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "*"
spdm-emu = { path = "../../test/spdm-emu" }
spdmlib = { path = "../../spdmlib" }
codec = { path = "../../codec" }
mctp_transport = { path = "../../mctp_transport" }
pcidoe_transport = { path = "../../pcidoe_transport" }
simple_logger = "1.11.0"
log = "0.4.13"
bytes = { version="1", default-features=false }
ring = { git="https://github.com/jyao1/ring", branch="uefi_support"}
flexi_logger = "0.18.0"