[package]
name = "spdm-requester-emu"
version = "0.1.0"
authors = ["Jiewen Yao <jiewen.yao@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spdm-emu = { path = "../spdm-emu" }
spdmlib = { path = "../../spdmlib" }
codec = { path = "../../codec" }
mctp_transport = { path = "../../mctp_transport" }
pcidoe_transport = { path = "../../pcidoe_transport" }
log = "0.4.13"
simple_logger = "1.11.0"
