[package]
name = "reqchallenge"
version = "0.1.0"
authors = ["haowei <weix.hao@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzlib = { path = "../../fuzzlib" }
rand = "0.8.4"

[features]
fuzzlog = []
analysis = []
